JIRA #time 6h